--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ rap.min.css" rel="stylesheet">
 <div class="container text-center bg-primary text-white">
   <nav class="navbar navbar-expand-lg navbar-light">
     
-    <img src="logo.jpg" class="img-fluid" alt="Responsive image">
+    <img src="dundee.png" class="img-fluid" alt="Responsive image">
     <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Home</a>
     <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">Price</a>
     <a class="col navbar-brand text-white" href="https://loganross07.github.io/web-coursework/">FaQ's</a>
@@ -46,7 +46,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-3"></p>
-              <div><img src="rangers.png" class="img-thumbnail form-check form-check-inline" alt="Hibernian Badge"></div>
+              <div><img src="rangersfc.png" class="img-thumbnail form-check form-check-inline" alt="Rangers Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
@@ -88,7 +88,7 @@ rap.min.css" rel="stylesheet">
               <p class="col-2 bg-primary text-white">Arbroath</p>
               <p class="col-2 bg-primary text-white">Carnoustie</p>
               <p class="col-2"></p>
-              <div class="col-3"><img src="hibs.png" class="img-fluid form-check form-check-inline" alt="Rangers Badge"></div>
+              <div class="col-3"><img src="hibs.png" class="img-fluid form-check form-check-inline" alt="Hibernian Badge"></div>
             </div>
             <div class ="row bg-primary text-white">
               <p class="col-2 bg-primary text-white">Departure</p>
