--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ rap.min.css" rel="stylesheet">
 <body>
 
   
-<div class="container text-center bg-primary text-white">
+<div class="container text-center bg-primary text-white ">
   <nav class="navbar navbar-expand-lg navbar-light">
     
     <img src="logo.jpg" class="img-fluid" alt="Responsive image">
@@ -48,12 +48,12 @@ rap.min.css" rel="stylesheet">
               <p class="col-3"></p>
               <div class="col-2"><img src="rangerfc.png" class="img-thumbnail form-check form-check-inline" alt="Rangers Badge"></div>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Departure</p>
               <p class="col-2 bg-primary text-white">16:20</p>
               <p class="col-2 bg-primary text-white">16:45</p>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Arrival</p>
               <p class="col-2 bg-primary text-white">16:40</p>
               <p class="col-2 bg-primary text-white">17:10</p>
@@ -70,12 +70,12 @@ rap.min.css" rel="stylesheet">
               <p class="col-3"></p>
               <div class="col-2"><img src="stmirren.png" class="img-fluid  form-check form-check-inline" alt="St. Mirren Badge"></div>
             </div>
-            <div class ="row bg-primary text-white col-12">
+            <div class ="row bg-primary text-white col-12 form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Departure</p>
               <p class="col-2 bg-primary text-white">13:50</p>
               <p class="col-2 bg-primary text-white">14:15</p>
             </div>
-            <div class ="row bg-primary text-white col-12">
+            <div class ="row bg-primary text-white col-12 form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Arrival</p>
               <p class="col-2 bg-primary text-white">14:20</p>
               <p class="col-2 bg-primary text-white">14:40</p>
@@ -90,12 +90,12 @@ rap.min.css" rel="stylesheet">
               <p class="col-2"></p>
               <div class="col-3"><img src="hibs.png" class="img-fluid form-check form-check-inline" alt="Hibernian Badge"></div>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Departure</p>
               <p class="col-2 bg-primary text-white">13:20</p>
               <p class="col-2 bg-primary text-white">13:45</p>
             </div>
-            <div class ="row bg-primary text-white">
+            <div class ="row bg-primary text-white form-check form-check-inline">
               <p class="col-2 bg-primary text-white">Arrival</p>
               <p class="col-2 bg-primary text-white">13:50</p>
               <p class="col-2 bg-primary text-white">14:10</p>
@@ -109,7 +109,7 @@ rap.min.css" rel="stylesheet">
         </div>
   </div>
 
-  <footer class="container text-center bg-primary text-white m-3">
+  <footer class="container text-center bg-primary text-white pt-3">
     <p>buy tickets to our next bus on our facebook page</p>
     <a class ="text-white" href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
   </footer>
