--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ rap.min.css" rel="stylesheet">
   <footer class="col-12 container text-center bg-primary text-white pt-3">
     <p>buy tickets to our next bus on our facebook page</p>
     <a class ="text-white" href="https://dundeefc.co.uk/tickets-dundee-support/">Buy Tickets to the next game here</p>
-      <button type="button" class="btn btn-primary">or click this button</button></a>
+      <button type="button" class="btn btn-primary bg-white text-primary">or click this button</button></a>
   </footer>
 
 </body>
